fix: long titles being unreadable

--- a/static/voiture_noire/story_read.css
+++ b/static/voiture_noire/story_read.css
@@ -22,7 +22,8 @@
 
     .header-story-title {
         font-size: 3em;
-        margin-bottom: 0.2em;
+        margin-bottom: 0;
+        line-height: 1em;
     }
 }
 
